--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,6 +10,9 @@ pipeline {
             }
         }
         stage('python') {
+            agent{
+                docker{image 'python'}
+            }
             steps {
                 sh 'node --version'
             }
