--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                 docker{image 'python'}
             }
             steps {
-                sh 'node --version'
+                sh 'python3 --version'
             }
         }
     }
